Corrección de errores

--- a/resources/Messages_en_EN.properties
+++ b/resources/Messages_en_EN.properties
@@ -12,7 +12,7 @@ error.login=Wrong Username or password.
 label.welcome=Welcome,
 label.selectcourse=Please, select a course:
 
-label.loadingstudents=Loaded students:
+label.loadingstudents=Student grades loaded: 
 label.of=of
 label.loadingqualifier=Generating course qualifier...
 label.loadingstats=Generating statistics...
