--- a/resources/Messages_es_ES.properties
+++ b/resources/Messages_es_ES.properties
@@ -12,7 +12,7 @@ error.login=Usuario y/o contraseña incorrectos.
 label.welcome=Bienvenida/o,
 label.selectcourse=Por favor, seleccione un curso:
 
-label.loadingstudents=Alumnos cargados:
+label.loadingstudents=Calificaciones de alumnos cargadas: 
 label.of=de
 label.loadingqualifier=Generando el calificador del curso...
 label.loadingstats=Generando estadisticas...
