--- a/resources/messages/Messages_en_en.properties
+++ b/resources/messages/Messages_en_en.properties
@@ -14,7 +14,7 @@ label.selectcourse=Please, select a course:
 
 label.loadingstudents=Student grades loaded: 
 label.of=of
-label.loadingqualifier=Generating course qualifier...
+label.loadingqualifier=Generating course qualifier... (This process may take some time)
 label.loadingstats=Generating statistics...
 
 error.nocourse=You have to select a course.
