--- a/resources/messages/Messages_es_es.properties
+++ b/resources/messages/Messages_es_es.properties
@@ -14,7 +14,7 @@ label.selectcourse=Por favor, seleccione un curso:
 
 label.loadingstudents=Calificaciones de alumnos cargadas: 
 label.of=de
-label.loadingqualifier=Generando el calificador del curso...
+label.loadingqualifier=Generando el calificador del curso... (Este proceso puede tardar unos minutos)
 label.loadingstats=Generando estadisticas...
 
 error.nocourse=Debe seleccionar un curso.
