Añadidas traducciones restantes.

--- a/resources/messages/Messages_en_en.properties
+++ b/resources/messages/Messages_en_en.properties
@@ -41,3 +41,8 @@ label.categoryitem=Category/Item:
 btn.group=Group
 btn.rol=Rol
 btn.type=Type
+
+error.savechart=Error saving chart.
+error.saveallcharts=Can't export charts.
+error.generatedataset=Error building the dataset.
+error.generateCharts=Can't generate charts.
