--- a/resources/messages/Messages_es_es.properties
+++ b/resources/messages/Messages_es_es.properties
@@ -41,3 +41,8 @@ label.categoryitem=Categoría/Item:
 btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
+
+error.savechart=Error al gruardar el gráfico.
+error.saveallcharts=No se han podido exportar los gráficos.
+error.generatedataset=Error en la construcción del dataset.
+error.generateCharts=No se han podido generar los gráficos.
