--- a/resources/messages/Messages_en_en.properties
+++ b/resources/messages/Messages_en_en.properties
@@ -46,3 +46,5 @@ error.savechart=Error saving chart.
 error.saveallcharts=Can't export charts.
 error.generatedataset=Error building the dataset.
 error.generateCharts=Can't generate charts.
+
+chartlabel.name=Name
