--- a/resources/messages/Messages_es_es.properties
+++ b/resources/messages/Messages_es_es.properties
@@ -46,3 +46,5 @@ error.savechart=Error al gruardar el gráfico.
 error.saveallcharts=No se han podido exportar los gráficos.
 error.generatedataset=Error en la construcción del dataset.
 error.generateCharts=No se han podido generar los gráficos.
+
+chartlabel.name=Nombre
