Añadidas traducciones de los gráficos.

--- a/resources/messages/Messages_en_en.properties
+++ b/resources/messages/Messages_en_en.properties
@@ -48,3 +48,15 @@ error.generatedataset=Error building the dataset.
 error.generateCharts=Can't generate charts.
 
 chartlabel.name=Name
+chartlabel.tableMean=Mean
+chartlabel.tableGroupMean=Mean Group
+chartlabel.generalMean=General Mean
+chartlabel.groupMean=Group Mean
+chartlabel.upperlimit=Upper Limit
+chartlabel.lowerlimit=Lower Limit
+chartlabel.median=Median
+chartlabel.firstquartile=First Quartile
+chartlabel.thirdquartile=Third Quartile
+chartlabel.atypicalValue=Atypical Value
+
+
