--- a/resources/messages/Messages_es_es.properties
+++ b/resources/messages/Messages_es_es.properties
@@ -48,3 +48,15 @@ error.generatedataset=Error en la construcción del dataset.
 error.generateCharts=No se han podido generar los gráficos.
 
 chartlabel.name=Nombre
+chartlabel.tableMean=Media
+chartlabel.tableGroupMean=Media Grupo
+chartlabel.generalMean=Media General
+chartlabel.groupMean=Media Del Grupo
+chartlabel.upperlimit=Limite Superior
+chartlabel.lowerlimit=Limite Inferior
+chartlabel.median=Mediana
+chartlabel.firstquartile=Primer Cuartil
+chartlabel.thirdquartile=Tercer Cuartil
+chartlabel.atypicalValue=Valor Atipico
+
+
