Ahora la aplicación permite encriptar y guardar los datos en local

--- a/resources/messages/Messages_en_en.properties
+++ b/resources/messages/Messages_en_en.properties
@@ -2,6 +2,9 @@ label.user=Username:
 label.course=Course:
 label.pass=Password:
 label.host=Host:
+label.lastupdate=Last local update:
+label.never=Not available
+checkbox.updatedata=Update data
 btn.enter=Enter
 btn.clear=Clear
 
