--- a/resources/messages/Messages_es_es.properties
+++ b/resources/messages/Messages_es_es.properties
@@ -2,6 +2,9 @@ label.user=Usuario:
 label.course=Curso:
 label.pass=Contraseña:
 label.host=Host:
+label.lastupdate=Última actualización local:
+label.never=No disponible
+checkbox.updatedata=Actualizar datos
 btn.enter=Entrar
 btn.clear=Borrar
 
