Añadido un fichero properties para el login #20

--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -2,6 +2,8 @@ label.user=Usuario:
 label.course=Curso:
 label.pass=Contraseña:
 label.host=Host:
+chk.saveusername=Recordar usuario
+chk.savehost=Recordar host
 label.lastupdate=Última actualización local:
 label.never=No disponible
 checkbox.updatedata=Actualizar datos
