--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -2,6 +2,8 @@ label.user=Username:
 label.course=Course:
 label.pass=Password:
 label.host=Host:
+chk.saveusername=Remember username
+chk.savehost=Remember host
 label.lastupdate=Last local update:
 label.never=Not available
 checkbox.updatedata=Update data
