Añadido la pestaña y el menu de opciones para los logs de moodle #26

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -46,6 +46,10 @@ label.categoryitem=Category/Item:
 btn.group=Group
 btn.rol=Rol
 btn.type=Type
+label.groupbydate= Group by: 
+label.startdate=Start date :
+label.enddate=End date :
+btn.filter=Filter
 
 error.savechart=Error saving chart.
 error.saveallcharts=Can't export charts.
