--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -46,6 +46,10 @@ label.categoryitem=Categoría/Item:
 btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
+label.groupbydate= Agrupar por: 
+label.startdate=Fecha de inicio: 
+label.enddate=Fecha de fin: 
+btn.filter=Filtrar
 
 error.savechart=Error al gruardar el gráfico.
 error.saveallcharts=No se han podido exportar los gráficos.
