Creado el listado y opciones de los logs en el GUI #31

--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -33,7 +33,7 @@ menu.saveall=Guardar todo como...
 menu.logout=Cerrar sesión
 menu.exit=Salir
 menu.edit=Editar
-menu.clearselection=Borrar seleción
+menu.clearselection=Borrar selección
 menu.help=Ayuda
 menu.about=Acerca de UBUGrades
 
@@ -43,17 +43,26 @@ label.type=Tipo:
 label.filter=Filtro...
 label.participants=Participantes:
 label.categoryitem=Categoría/Item:
+label.component=Componente: 
 btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
+label.actualgroupbydate = Agrupar por actual: 
+label.actualstartdate=Fecha de inicio actual: 
+label.actualenddate=Fecha de fin actual: 
 label.groupbydate= Agrupar por: 
 label.startdate=Fecha de inicio: 
 label.enddate=Fecha de fin: 
-btn.filter=Filtrar
+btn.filter=Guardar filtro
+tab.logs=Registros
+tab.grades=Calificaciones
+choiceBox.DAY=Días
+choiceBox.WEEK_OF_THE_YEAR=Semanas
+choiceBox.YEAR_MONTH=Meses y años
 
 error.savechart=Error al gruardar el gráfico.
 error.saveallcharts=No se han podido exportar los gráficos.
-error.generatedataset=Error en la construcción del dataset.
+error.generatedataset=Error en la construccián del dataset.
 error.generateCharts=No se han podido generar los gráficos.
 
 chartlabel.name=Nombre
