--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -43,13 +43,22 @@ label.type=Type:
 label.filter=Filter...
 label.participants=Participants:
 label.categoryitem=Category/Item:
+label.component=Component: 
 btn.group=Group
 btn.rol=Rol
 btn.type=Type
+label.actualgroupbydate =Current group by: 
+label.actualstartdate=Current start date: 
+label.actualenddate=Current end date: 
 label.groupbydate= Group by: 
-label.startdate=Start date :
-label.enddate=End date :
-btn.filter=Filter
+label.startdate=Start date: 
+label.enddate=End date: 
+btn.filter=Save filter
+tab.logs=Logs
+tab.grades=Grades
+choiceBox.DAY=Days
+choiceBox.WEEK_OF_THE_YEAR=Weeks
+choiceBox.YEAR_MONTH=Year and Months
 
 error.savechart=Error saving chart.
 error.saveallcharts=Can't export charts.
