--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -53,7 +53,7 @@ label.actualenddate=Current end date:
 label.groupbydate= Group by: 
 label.startdate=Start date: 
 label.enddate=End date: 
-btn.filter=Save filter
+btn.filter=Apply filter
 tab.logs=Logs
 tab.grades=Grades
 choiceBox.DAY=Days
@@ -76,5 +76,31 @@ chartlabel.median=Median
 chartlabel.firstquartile=First Quartile
 chartlabel.thirdquartile=Third Quartile
 chartlabel.atypicalValue=Atypical Value
+chart.mean=Mean
 
-
+component.ACTIVITY_REPORT=Activity report
+component.ASSIGNMENT=Assignment
+component.CHOICE=Choice;
+component.EXCEL_SPREADSHEET=Excel spreadsheet
+component.FEEDBACK=Feedback
+component.FILE=File
+component.FILE_SUBMISSIONS=File submissions
+component.FOLDER=Folder
+component.FORUM=Forum
+component.GRADER_REPORT=Grader report
+component.LIVE_LOGS=Live logs
+component.LOGS=Logs
+component.OPENDOCUMENT_SPREADSHEET=OpenDocument spreadsheet
+component.OUTCOMES_REPORT=Outcomes report
+component.OVERVIEW_REPORT=Overview report
+component.PAGE=Page
+component.PLAIN_TEXT_FILE=Plain text file
+component.QUIZ=Quiz
+component.RECYCLE_BIN=Recycle bin
+component.SINGLE_VIEW=Single view
+component.SUBMISSION_COMMENTS=Submission comments
+component.SYSTEM=System
+component.USER_REPORT=User report
+component.USER_TOURS=User tours
+component.WORKSHOP=Workshop
+component.XML_FILE=XML file
