--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -53,7 +53,7 @@ label.actualenddate=Fecha de fin actual:
 label.groupbydate= Agrupar por: 
 label.startdate=Fecha de inicio: 
 label.enddate=Fecha de fin: 
-btn.filter=Guardar filtro
+btn.filter=Aplicar filtro
 tab.logs=Registros
 tab.grades=Calificaciones
 choiceBox.DAY=Días
@@ -76,5 +76,31 @@ chartlabel.median=Mediana
 chartlabel.firstquartile=Primer Cuartil
 chartlabel.thirdquartile=Tercer Cuartil
 chartlabel.atypicalValue=Valor Atipico
+chart.mean=Media
 
-
+component.ACTIVITY_REPORT=Activity report
+component.ASSIGNMENT=Tarea
+component.CHOICE=Choice
+component.EXCEL_SPREADSHEET=Excel spreadsheet
+component.FEEDBACK=Retroalimentación
+component.FILE=File
+component.FILE_SUBMISSIONS=File submissions
+component.FOLDER=Folder
+component.FORUM=Foro
+component.GRADER_REPORT=Grader report
+component.LIVE_LOGS=Live logs
+component.LOGS=Logs
+component.OPENDOCUMENT_SPREADSHEET=OpenDocument spreadsheet
+component.OUTCOMES_REPORT=Outcomes report
+component.OVERVIEW_REPORT=Overview report
+component.PAGE=Page
+component.PLAIN_TEXT_FILE=Plain text file
+component.QUIZ=Quiz
+component.RECYCLE_BIN=Recycle bin
+component.SINGLE_VIEW=Single view
+component.SUBMISSION_COMMENTS=Submission comments
+component.SYSTEM=System
+component.USER_REPORT=User report
+component.USER_TOURS=User tours
+component.WORKSHOP=Workshop
+component.XML_FILE=XML file
