Cambiado la clase groupByDay por LocalDate en vez de ZonedDateTime

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -47,12 +47,10 @@ label.component=Component:
 btn.group=Group
 btn.rol=Rol
 btn.type=Type
-label.actualgroupbydate =Current group by: 
-label.actualstartdate=Current start date: 
-label.actualenddate=Current end date: 
+
 label.groupbydate= Group by: 
-label.startdate=Start date: 
-label.enddate=End date: 
+label.startdate=Start reference date: 
+label.enddate=End reference date: 
 btn.filter=Apply filter
 tab.logs=Logs
 tab.grades=Grades
