--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -47,12 +47,10 @@ label.component=Componente:
 btn.group=Grupo
 btn.rol=Rol
 btn.type=Tipo
-label.actualgroupbydate = Agrupar por actual: 
-label.actualstartdate=Fecha de inicio actual: 
-label.actualenddate=Fecha de fin actual: 
+
 label.groupbydate= Agrupar por: 
-label.startdate=Fecha de inicio: 
-label.enddate=Fecha de fin: 
+label.startdate=Fecha de refencia inicial: 
+label.enddate=Fecha de referencia final: 
 btn.filter=Aplicar filtro
 tab.logs=Registros
 tab.grades=Calificaciones
