Arreglado agrupar por dia y añadido agrupar por años y agrupar por trimestres #33 #34

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -55,8 +55,10 @@ btn.filter=Apply filter
 tab.logs=Logs
 tab.grades=Grades
 choiceBox.DAY=Days
-choiceBox.WEEK_OF_THE_YEAR=Weeks
-choiceBox.YEAR_MONTH=Year and Months
+choiceBox.YEAR=Years
+choiceBox.YEAR_WEEK=Weeks
+choiceBox.YEAR_QUARTER=Quarters
+choiceBox.YEAR_MONTH=Months
 
 error.savechart=Error saving chart.
 error.saveallcharts=Can't export charts.
