--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -55,8 +55,10 @@ btn.filter=Aplicar filtro
 tab.logs=Registros
 tab.grades=Calificaciones
 choiceBox.DAY=Días
-choiceBox.WEEK_OF_THE_YEAR=Semanas
-choiceBox.YEAR_MONTH=Meses y años
+choiceBox.YEAR=Años
+choiceBox.YEAR_WEEK=Semanas
+choiceBox.YEAR_QUARTER=Trimestres
+choiceBox.YEAR_MONTH=Meses
 
 error.savechart=Error al gruardar el gráfico.
 error.saveallcharts=No se han podido exportar los gráficos.
