Grafia parcial de logs

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -21,6 +21,7 @@ label.loadingstudents=Student grades loaded:
 label.of=of
 label.loadingqualifier=Generating course qualifier... (This process may take some time)
 label.loadingstats=Generating statistics...
+label.updatinglog=Updating log...
 
 error.nocourse=You have to select a course.
 
@@ -80,16 +81,21 @@ chart.mean=Mean
 
 component.ACTIVITY_REPORT=Activity report
 component.ASSIGNMENT=Assignment
+component.BOOK=Book
 component.CHOICE=Choice;
+component.DATABASE=Database
 component.EXCEL_SPREADSHEET=Excel spreadsheet
 component.FEEDBACK=Feedback
 component.FILE=File
 component.FILE_SUBMISSIONS=File submissions
 component.FOLDER=Folder
 component.FORUM=Forum
+component.GLOSSARY=Glossary 
 component.GRADER_REPORT=Grader report
+component.LESSON=Lesson
 component.LIVE_LOGS=Live logs
 component.LOGS=Logs
+component.ONLINE_TEXT_SUBMISSIONS=Online text submissions
 component.OPENDOCUMENT_SPREADSHEET=OpenDocument spreadsheet
 component.OUTCOMES_REPORT=Outcomes report
 component.OVERVIEW_REPORT=Overview report
@@ -97,10 +103,14 @@ component.PAGE=Page
 component.PLAIN_TEXT_FILE=Plain text file
 component.QUIZ=Quiz
 component.RECYCLE_BIN=Recycle bin
+component.SCORM_PACKAGE=SCORM package
 component.SINGLE_VIEW=Single view
 component.SUBMISSION_COMMENTS=Submission comments
+component.SURVEY=Survey
 component.SYSTEM=System
+component.URL=URL
 component.USER_REPORT=User report
 component.USER_TOURS=User tours
+component.WIKI=Wiki
 component.WORKSHOP=Workshop
 component.XML_FILE=XML file
