--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -21,6 +21,8 @@ label.loadingstudents=Calificaciones de alumnos cargadas:
 label.of=de
 label.loadingqualifier=Generando el calificador del curso... (Este proceso puede tardar unos minutos)
 label.loadingstats=Generando estadisticas...
+label.updatinglog=Actualizando log...
+
 
 error.nocourse=Debe seleccionar un curso.
 
@@ -78,29 +80,38 @@ chartlabel.thirdquartile=Tercer Cuartil
 chartlabel.atypicalValue=Valor Atipico
 chart.mean=Media
 
-component.ACTIVITY_REPORT=Activity report
+component.ACTIVITY_REPORT=Informe de actividades
 component.ASSIGNMENT=Tarea
-component.CHOICE=Choice
-component.EXCEL_SPREADSHEET=Excel spreadsheet
-component.FEEDBACK=Retroalimentación
-component.FILE=File
-component.FILE_SUBMISSIONS=File submissions
-component.FOLDER=Folder
+component.BOOK=Libro
+component.CHOICE=Consulta
+component.DATABASE=Base de datos
+component.EXCEL_SPREADSHEET=Hoja de cálculo de Excel
+component.FEEDBACK=Encuesta
+component.FILE=Archivo
+component.FILE_SUBMISSIONS=Envíos de archivos
+component.FOLDER=Carpeta
 component.FORUM=Foro
-component.GRADER_REPORT=Grader report
-component.LIVE_LOGS=Live logs
-component.LOGS=Logs
+component.GLOSSARY=Glosario
+component.GRADER_REPORT=Informe de calificaciones
+component.LESSON=Lección
+component.LIVE_LOGS=Registros activos
+component.LOGS=Registros
+component.ONLINE_TEXT_SUBMISSIONS=Envíos de texto online
 component.OPENDOCUMENT_SPREADSHEET=OpenDocument spreadsheet
-component.OUTCOMES_REPORT=Outcomes report
-component.OVERVIEW_REPORT=Overview report
-component.PAGE=Page
-component.PLAIN_TEXT_FILE=Plain text file
-component.QUIZ=Quiz
+component.OUTCOMES_REPORT=Informe de resultados
+component.OVERVIEW_REPORT=Informe general
+component.PAGE=Página
+component.PLAIN_TEXT_FILE=Fichero de texto plano
+component.QUIZ=Cuestionario
 component.RECYCLE_BIN=Recycle bin
+component.SCORM_PACKAGE=Paquete SCORM
 component.SINGLE_VIEW=Single view
-component.SUBMISSION_COMMENTS=Submission comments
-component.SYSTEM=System
-component.USER_REPORT=User report
+component.SUBMISSION_COMMENTS=Enviar comentarios
+component.SURVEY=Encuestas predefinidas
+component.SYSTEM=Sistema
+component.URL=URL
+component.USER_REPORT=Informe de usuario
 component.USER_TOURS=User tours
-component.WORKSHOP=Workshop
-component.XML_FILE=XML file
+component.WIKI=Wiki
+component.WORKSHOP=Taller
+component.XML_FILE=Fichero XML
