--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -16,6 +16,11 @@ error.login=Usuario y/o contraseña incorrectos.
 
 label.welcome=Bienvenida/o,
 label.selectcourse=Por favor, seleccione un curso:
+title.passwordChanged=Contraseña modificada
+header.passwordChangedMessage=Se ha detectado que se ha cambiado la contraseña
+header.passwordDateTime=Fecha de la contraseña antigua: 
+label.oldPassword= Contraseña antigua: 
+
 
 label.loadingstudents=Calificaciones de alumnos cargadas: 
 label.of=de
