Añadido nuevas clasificaciones de logs #39

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -85,18 +85,19 @@ chart.mean=Mean
 
 component.ACTIVITY_REPORT=Activity report
 component.ASSIGNMENT=Assignment
-component.BOOK=Book
-component.CHOICE=Choice;
-component.DATABASE=Database
+component.CHAT=Chat
+component.CHOICE=Choice
+component.COURSE_PARTICIPATION=Course participation
 component.EXCEL_SPREADSHEET=Excel spreadsheet
 component.FEEDBACK=Feedback
 component.FILE=File
 component.FILE_SUBMISSIONS=File submissions
 component.FOLDER=Folder
 component.FORUM=Forum
-component.GLOSSARY=Glossary 
+component.GLOSSARY=Glossary
 component.GRADER_REPORT=Grader report
-component.LESSON=Lesson
+component.GUIA_DOCENTE=Guía Docente
+component.HOTPOT_MODULE=HotPot module
 component.LIVE_LOGS=Live logs
 component.LOGS=Logs
 component.ONLINE_TEXT_SUBMISSIONS=Online text submissions
@@ -107,14 +108,137 @@ component.PAGE=Page
 component.PLAIN_TEXT_FILE=Plain text file
 component.QUIZ=Quiz
 component.RECYCLE_BIN=Recycle bin
-component.SCORM_PACKAGE=SCORM package
 component.SINGLE_VIEW=Single view
 component.SUBMISSION_COMMENTS=Submission comments
-component.SURVEY=Survey
 component.SYSTEM=System
+component.TURNITIN_ASSIGNMENT_2=Turnitin Assignment 2
 component.URL=URL
 component.USER_REPORT=User report
 component.USER_TOURS=User tours
 component.WIKI=Wiki
 component.WORKSHOP=Workshop
 component.XML_FILE=XML file
+
+eventname.ACTIVITY_REPORT_VIEWED=Activity report viewed
+eventname.ADD_SUBMISSION=Add Submission
+eventname.ALL_THE_SUBMISSIONS_ARE_BEING_DOWNLOADED=All the submissions are being downloaded.
+eventname.AN_ONLINE_TEXT_HAS_BEEN_UPLOADED=An online text has been uploaded.
+eventname.ASSIGNMENT_OVERRIDE_CREATED=Assignment override created
+eventname.ASSIGNMENT_OVERRIDE_DELETED=Assignment override deleted
+eventname.ASSIGNMENT_OVERRIDE_UPDATED=Assignment override updated
+eventname.A_FILE_HAS_BEEN_UPLOADED=A file has been uploaded.
+eventname.A_SUBMISSION_HAS_BEEN_SUBMITTED=A submission has been submitted.
+eventname.BADGE_LISTING_VIEWED=Badge listing viewed
+eventname.CALENDAR_EVENT_CREATED=Calendar event created
+eventname.CALENDAR_EVENT_DELETED=Calendar event deleted
+eventname.CALENDAR_EVENT_UPDATED=Calendar event updated
+eventname.CHOICE_ANSWER_ADDED=Choice answer added
+eventname.CHOICE_REPORT_VIEWED=Choice report viewed
+eventname.COMMENT_CREATED=Comment created
+eventname.COMMENT_DELETED=Comment deleted
+eventname.COURSE_ACTIVITY_COMPLETION_UPDATED=Course activity completion updated
+eventname.COURSE_BACKUP_CREATED=Course backup created
+eventname.COURSE_CREATED=Course created
+eventname.COURSE_MODULE_CREATED=Course module created
+eventname.COURSE_MODULE_DELETED=Course module deleted
+eventname.COURSE_MODULE_INSTANCE_LIST_VIEWED=Course module instance list viewed
+eventname.COURSE_MODULE_UPDATED=Course module updated
+eventname.COURSE_MODULE_VIEWED=Course module viewed
+eventname.COURSE_RESET_ENDED=Course reset ended
+eventname.COURSE_RESET_STARTED=Course reset started
+eventname.COURSE_SEARCHED=Course searched
+eventname.COURSE_SECTION_CREATED=Course section created
+eventname.COURSE_SECTION_UPDATED=Course section updated
+eventname.COURSE_SUMMARY_VIEWED=Course summary viewed
+eventname.COURSE_UPDATED=Course updated
+eventname.COURSE_USER_REPORT_VIEWED=Course user report viewed
+eventname.COURSE_VIEWED=Course viewed
+eventname.DISCUSSION_CREATED=Discussion created
+eventname.DISCUSSION_DELETED=Discussion deleted
+eventname.DISCUSSION_MOVED=Discussion moved
+eventname.DISCUSSION_SUBSCRIPTION_CREATED=Discussion subscription created
+eventname.DISCUSSION_VIEWED=Discussion viewed
+eventname.ENROLMENT_INSTANCE_CREATED=Enrolment instance created
+eventname.ENTRY_HAS_BEEN_CREATED=Entry has been created
+eventname.ENTRY_HAS_BEEN_UPDATED=Entry has been updated
+eventname.ENTRY_HAS_BEEN_VIEWED=Entry has been viewed
+eventname.EVALUATION_SYSTEM_CREATED=Evaluation system created
+eventname.EVALUATION_SYSTEM_MODIFIED=Evaluation system modified
+eventname.FOLDER_UPDATED=Folder updated
+eventname.GRADER_REPORT_VIEWED=Grader report viewed
+eventname.GRADE_DELETED=Grade deleted
+eventname.GRADE_OUTCOMES_REPORT_VIEWED=Grade outcomes report viewed
+eventname.GRADE_OVERVIEW_REPORT_VIEWED=Grade overview report viewed
+eventname.GRADE_SINGLE_VIEW_REPORT_VIEWED=Grade single view report viewed.
+eventname.GRADE_USER_REPORT_VIEWED=Grade user report viewed
+eventname.GRADING_FORM_VIEWED=Grading form viewed
+eventname.GRADING_TABLE_VIEWED=Grading table viewed
+eventname.GROUPING_CREATED=Grouping created
+eventname.GROUP_CREATED=Group created
+eventname.GROUP_DELETED=Group deleted
+eventname.GROUP_MEMBER_ADDED=Group member added
+eventname.GROUP_MEMBER_REMOVED=Group member removed
+eventname.HOTPOT_ATTEMPT_STARTED=HotPot attempt started
+eventname.HOTPOT_ATTEMPT_SUBMITTED=HotPot attempt submitted
+eventname.ITEM_CREATED=Item created
+eventname.ITEM_DELETED=Item deleted
+eventname.LIST_SUBMISSIONS=List Submissions
+eventname.LIVE_LOG_REPORT_VIEWED=Live log report viewed
+eventname.LOG_REPORT_VIEWED=Log report viewed
+eventname.MESSAGE_SENT=Message sent
+eventname.OPENDOCUMENT_GRADE_EXPORTED=OpenDocument grade exported
+eventname.OUTLINE_REPORT_VIEWED=Outline report viewed
+eventname.OUTSTANDING_RATINGS_MODIFIED=Outstanding ratings modified
+eventname.PARTICIPATION_REPORT_VIEWED=Participation report viewed
+eventname.POST_CREATED=Post created
+eventname.POST_DELETED=Post deleted
+eventname.POST_UPDATED=Post updated
+eventname.QUESTION_CATEGORY_CREATED=Question category created
+eventname.QUESTION_MANUALLY_GRADED=Question manually graded
+eventname.QUIZ_ATTEMPT_ABANDONED=Quiz attempt abandoned
+eventname.QUIZ_ATTEMPT_PREVIEW_STARTED=Quiz attempt preview started
+eventname.QUIZ_ATTEMPT_REVIEWED=Quiz attempt reviewed
+eventname.QUIZ_ATTEMPT_STARTED=Quiz attempt started
+eventname.QUIZ_ATTEMPT_SUBMITTED=Quiz attempt submitted
+eventname.QUIZ_ATTEMPT_SUMMARY_VIEWED=Quiz attempt summary viewed
+eventname.QUIZ_ATTEMPT_TIME_LIMIT_EXCEEDED=Quiz attempt time limit exceeded
+eventname.QUIZ_ATTEMPT_VIEWED=Quiz attempt viewed
+eventname.QUIZ_EDIT_PAGE_VIEWED=Quiz edit page viewed
+eventname.QUIZ_OVERRIDE_CREATED=Quiz override created
+eventname.QUIZ_OVERRIDE_DELETED=Quiz override deleted
+eventname.QUIZ_REPORT_VIEWED=Quiz report viewed
+eventname.RECENT_ACTIVITY_VIEWED=Recent activity viewed
+eventname.RESPONSE_SUBMITTED=Response submitted
+eventname.ROLE_ASSIGNED=Role assigned
+eventname.ROLE_UNASSIGNED=Role unassigned
+eventname.SCALE_CREATED=Scale created
+eventname.SESSIONS_VIEWED=Sessions viewed
+eventname.SOME_CONTENT_HAS_BEEN_POSTED=Some content has been posted.
+eventname.STEP_SHOWN=Step shown
+eventname.SUBJECT_MODIFIED=Subject modified
+eventname.SUBMISSION_CONFIRMATION_FORM_VIEWED=Submission confirmation form viewed.
+eventname.SUBMISSION_CREATED=Submission created.
+eventname.SUBMISSION_FORM_VIEWED=Submission form viewed.
+eventname.SUBMISSION_UPDATED=Submission updated.
+eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_UPDATED=The status of the submission has been updated.
+eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_VIEWED=The status of the submission has been viewed.
+eventname.THE_SUBMISSIONS_HAVE_BEEN_LOCKED_FOR_A_USER=The submissions have been locked for a user.
+eventname.THE_SUBMISSIONS_HAVE_BEEN_UNLOCKED_FOR_A_USER=The submissions have been unlocked for a user.
+eventname.THE_SUBMISSION_HAS_BEEN_GRADED=The submission has been graded.
+eventname.THE_USER_HAS_ACCEPTED_THE_STATEMENT_OF_THE_SUBMISSION=The user has accepted the statement of the submission.
+eventname.TOUR_ENDED=Tour ended
+eventname.TOUR_STARTED=Tour started
+eventname.TXT_GRADE_EXPORTED=TXT grade exported
+eventname.UNIT_MODIFIED=Unit modified
+eventname.USER_ENROLLED_IN_COURSE=User enrolled in course
+eventname.USER_GRADED=User graded
+eventname.USER_LIST_VIEWED=User list viewed
+eventname.USER_LOG_REPORT_VIEWED=User log report viewed
+eventname.USER_PROFILE_VIEWED=User profile viewed
+eventname.USER_REPORT_VIEWED=User report viewed
+eventname.USER_UNENROLLED_FROM_COURSE=User unenrolled from course
+eventname.XLS_GRADE_EXPORTED=XLS grade exported
+eventname.XML_GRADE_EXPORTED=XML grade exported
+eventname.ZIP_ARCHIVE_OF_FOLDER_DOWNLOADED=Zip archive of folder downloaded
+
+
