Añadido los components y eventos no disponibles

--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -83,6 +83,10 @@ chartlabel.thirdquartile=Third Quartile
 chartlabel.atypicalValue=Atypical Value
 chart.mean=Mean
 
+component.COMPONENT_NOT_AVAILABLE=Component not available
+eventname.EVENT_NOT_AVAILABLE=Event not available
+
+
 component.ACTIVITY_REPORT=Activity report
 component.ASSIGNMENT=Assignment
 component.CHAT=Chat
