--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -85,6 +85,12 @@ chartlabel.thirdquartile=Tercer Cuartil
 chartlabel.atypicalValue=Valor Atipico
 chart.mean=Media
 
+
+component.COMPONENT_NOT_AVAILABLE=Component no disponible
+eventname.EVENT_NOT_AVAILABLE=Evento no disponible
+
+
+
 component.ACTIVITY_REPORT=Informe de actividades
 component.ASSIGNMENT=Tarea
 component.CHAT=Chat
